Closed Bug 1700839 Opened 3 years ago Closed 3 years ago

Text overlaps icon in Library search field in macOS <10.14

Categories

(Core :: Widget: Cocoa, defect, P2)

Firefox 89
Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- verified
firefox89 --- verified

People

(Reporter: sam, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression)

Attachments

(6 files, 2 obsolete files)

Attached image Example

Steps to reproduce:

  1. Be on macOS 10.13.x.
  2. In Nightly, open Bookmarks menu > Show All Bookmarks.
  3. Observe search field in the newly opened Library window.

Expected result:
Icon and text are not overlapping, as in newer versions of macOS. In High Sierra, the "Search" text in search fields is centered in other applications.

Actual result:
See screenshot. The icon is in the center of the field, but the text is left-aligned, so they overlap.

Mozregression blames this commit: Bug 1697350 - Simplify focus ring drawing code for search fields.

Keywords: regression
Regressed by: 1697350
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1697350

Hi Markus, do you have cycles to look at this new regression in 88?

Flags: needinfo?(mstange.moz)
Status: UNCONFIRMED → NEW
Ever confirmed: true

Depends on D110142

(In reply to Ryan VanderMeulen [:RyanVM] from comment #2)

Hi Markus, do you have cycles to look at this new regression in 88?

Thanks for putting this on my radar again. I think I have a fix but still need to test it.

Assignee: nobody → mstange.moz
Status: NEW → ASSIGNED
Flags: needinfo?(mstange.moz)

Thanks Markus! Unfortunately, I am still seeing the issue on the linked build.

Flags: needinfo?(sam)

Thanks for testing!

markus could you set priority / severerity? Also, does it only affect 10.13?

Flags: needinfo?(mstange.moz)

Setting to P2 because it's a regression. We do not yet know which macOS versions are affected.

Severity: -- → S3
Flags: needinfo?(mstange.moz)
Priority: -- → P2

I found a machine running 10.12.6 and can confirm the issue also affects that version.

I've checked the other versions, it does not affect any 10.14+ version.

Summary: Text overlaps icon in Library search field in macOS 10.13 → Text overlaps icon in Library search field in macOS <10.14

Do we know if 89 is affected with the other MR1 changes going into it?

I'm not aware of any changes that would have stopped this bug from happening on 89.

(In reply to Sam Johnson from comment #7)

Thanks Markus! Unfortunately, I am still seeing the issue on the linked build.

I figured out why: I was only applying the fix to mSearchFieldCell but not to mToolbarSearchFieldCell. The library window uses the latter.

Attachment #9212280 - Attachment is obsolete: true

(In reply to Markus Stange [:mstange] from comment #15)

(In reply to Sam Johnson from comment #7)

Thanks Markus! Unfortunately, I am still seeing the issue on the linked build.

I figured out why: I was only applying the fix to mSearchFieldCell but not to mToolbarSearchFieldCell. The library window uses the latter.

Ah! Indeed, the bookmarks sidebar (which I did not check previously) is fixed with that build (bottom, top is Nightly). However, it gains a permanent "clear" button with the change.

Yup. The clear button even appears on Big Sur with the original patch, and I'm fixing that now.

Attachment #9212281 - Attachment is obsolete: true

New try build: target.dmg

Try build looks good to me on 10.12.6, 10.13.6, and 11.2.3.

Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/c03938fc1d2d
Use the same NSSearchFieldCell object for both toolbar-style and non-toolbar-style searchfields. r=mac-reviewers,bradwerth.
https://hg.mozilla.org/integration/autoland/rev/8a26e78f4fec
Make sure that search field cells render the magnifying glass icon at the start of the field. r=mac-reviewers,bradwerth
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(mstange.moz)

Comment on attachment 9213857 [details]
Bug 1700839 - Use the same NSSearchFieldCell object for both toolbar-style and non-toolbar-style searchfields. r=#mac-reviewers.

Beta/Release Uplift Approval Request

  • User impact if declined: Incorrectly rendered search fields in Firefox UI elements on macOS 10.12 and 10.13
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Open the bookmarks sidebar and the library window, and check that the search field looks good on all versions of macOS and with/without text inside, with/without focus, and when the containing window is active/inactive.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We don't have many searchfields in the UI and Sam and I have already tested them on four different macOS versions. (10.12, 10.13, 11.2, 11.3) And the code changes can't really break anything that's not a search field.
  • String changes made/needed: none
Flags: needinfo?(mstange.moz)
Attachment #9213857 - Flags: approval-mozilla-beta?
Attachment #9213858 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9213857 [details]
Bug 1700839 - Use the same NSSearchFieldCell object for both toolbar-style and non-toolbar-style searchfields. r=#mac-reviewers.

Thanks for tracking this down. Approved for 88.0b9.

Attachment #9213857 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9213858 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the initial issue on Firefox 89.0a1 (2021-03-24) on macOS 10.12.
The issue is verified fixed with Firefox 88.0b9 (20210407182807) from comment 28 and 89.0a1 (20210407212527). The text and the icon are correctly aligned on macOS 10.12 and 10.13.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: