Bug 1700839 - Make sure that search field cells render the magnifying glass icon at the start of the field. r=bradwerth, a=RyanVM

Depends on D110971

Differential Revision: https://phabricator.services.mozilla.com/D110972